HRM 1.1.4

(B) lif files are now correctly transferred to the image processing server. 

HRM 1.1.3

(B) the experimental PSFs are now correctly transferred from the HRM server to the image processing server, if they are not the same machine. 

HRM 1.1.2

(F) the summary email informs the user that a login is required to access the mip preview.
(B) 'remove constant absolute background value' in task setting was ignored by HRM.
(B) in last_changes.php, the wrong file handle name was passed to fclose( ).

HRM 1.1.1

(B) fix in mail() to avoid spam filters.
(B) navigation arrows are shown in select_images.php when a preview is displayed.

HRM 1.1

(I) First official release. 


Legend: (B): bug fix, (F): new feature, (I): info.